# telegram-sleuth

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/telegram_sleuth/: __init__.py
src/telegram_sleuth_naufalmng/: __init__.py
